cp project/force-app/main/default/objects/Additional_Charge__c/Additional_Charge__c.object-meta.xml
<CustomObject>
    <description>Customer requested extras (e.g. car parking). 2 Reminders max, No interest, No unit release.</description>
    <label>Additional Charge</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Charge Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>