cp project/force-app/main/default/objects/Additional_Charge__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Additional Charges</relationshipLabel>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>