cp project/force-app/main/default/objects/Additional_Charge__c/fields/Charge_Ref__c.field-meta.xml
<CustomField>
    <fullName>Charge_Ref__c</fullName>
    <label>Charge Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>