cp project/force-app/main/default/objects/Additional_Charge__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extra Car Parking</fullName>
                <default>true</default>
                <label>Extra Car Parking</label>
            </value>
            <value>
                <fullName>Additional Upgrade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>