cp project/force-app/main/default/objects/Additional_Charge__c/validationRules/Charge_Amount_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Charge_Amount_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Charge Amount must be greater than zero.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Amount__c)), Amount__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Charge Amount must be greater than zero.</errorMessage>
</ValidationRule>